# agentic-job-hunting

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: AI-MAINTAINER-GUIDE.md
examples/: evidence.md  synthetic-jd.json  synthetic-profile.json
scripts/: privacy_check.py  verify.sh
src/agentic_job_hunting/: __init__.py  cli.py  ledger.py  pipeline.py  review.py
tests/: test_pipeline.py
